@@ -5,7 +5,7 @@
 # Make sure the secret is at least 30 characters and all random,
 # no regular words or you'll be exposed to dictionary attacks.
 ActionController::Base.session = {
-  :disabled    => true,
+#   :disabled    => true,
   :key         => '_rails_session',
   :secret      => 'd652b8fa9b4e4e3018165d86310675170607c3eab5cc2e029d67187cee015a777ebf09dd19adfd3929e4e48c27f83bbec0c7eee101dfe08e1418669009fe93e9'
 }
@@ -15,7 +15,7 @@ ActionController::Base.session = {
 # (create the session table with "rake db:sessions:create")
 # ActionController::Base.session_store = :active_record_store
 
-# if defined?($servlet_context)
-#   require 'action_controller/session/java_servlet_store'
-#   ActionController::Base.session_store = :java_servlet_store
-# end
+if defined?($servlet_context)
+  require 'action_controller/session/java_servlet_store'
+  ActionController::Base.session_store = :java_servlet_store
+end
